# cspr

./: CMakeLists.txt  readme.md
py_frontend/: test.py
src/: CMakeLists.txt  PickerCNN.cpp  cml.cpp  cml.h  cml_block.cu  cml_cl.cpp  cml_cl.h  cml_clblas.cpp  cml_clus.cpp  cml_cu.cu  cml_cuda.cpp  cml_cuda.cu  cml_cuda.h  cml_dcuda.cu  cml_dcv.cpp  cml_gpu_rate.cpp  cml_gpu_rate.cu  cml_gpu_rate_vote.cu  cml_max.cu  cml_mini.cpp  cml_mini.cu  cml_nb.cu  cml_nocv.cpp  cml_nocv.h  cml_noise.cpp  cml_noise.cu  cml_nonpart.cpp  cml_nonpart_fix.cpp  cml_rate.cpp  cml_read_mrcs_image.cpp  cml_real.cpp  cml_sort.cpp  cml_t.cpp  cml_trans.cpp  cml_trsd.cpp  cml_va.cpp  dft.cpp  eigen_t.cpp  fft.c  mnistload.cpp  (+9 more)
test/: mnist_test.cpp  mnist_test2_mnistLoad.cpp  sqlite_test.cpp  testboost.cpp
